--- a/game/package.json
+++ b/game/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Ninush2498/project.git"
   }
 }
