--- a/game/package.json
+++ b/game/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "json-mask": "^0.3.9",
     "socket.io": "^2.3.0"
   },
   "repository": {
