--- a/game/package.json
+++ b/game/package.json
@@ -9,8 +9,12 @@
   "author": "Nina",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "https-localhost": "^4.5.3",
     "json-mask": "^0.3.9",
+    "query-string": "^6.12.1",
     "socket.io": "^2.3.0"
   },
   "repository": {
